Refactor tree configuration and item drop mechanics
Replaced `ItemStack` with a new `Drop` class for enhanced serialization and deserialization of item drops. Introduced specialized classes for YAML parsing (`TreeConfigConstructor`, `TreeConfigRepresenter`) and streamlined handling of tree spawner configurations. Updated `ItemManager` to support multiple item systems (Minecraft, Nexo, MMOItems). Removed legacy `TreeConfigManager`.